--- a/spring-boot-01-helloworld/pom.xml
+++ b/spring-boot-01-helloworld/pom.xml
@@ -8,11 +8,15 @@
     <artifactId>spring-boot-01-helloworld</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <!--父项目-->
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.9.RELEASE</version>
     </parent>
+
+    <!--依赖-->
+    <!--spring-boot-starter：场景启动器-->
     <dependencies>
         <dependency>
             <groupId>org.springframework.boot</groupId>
